@@ -55,6 +55,7 @@ namespace scheme {
     Object evenPEx(int argc, const Object* argv);
     Object oddPEx(int argc, const Object* argv);
     Object magnitudeEx(int argc, const Object* argv);
+    Object angleEx(int argc, const Object* argv);
     Object complexPEx(int argc, const Object* argv);
     Object realPEx(int argc, const Object* argv);
     Object integerPEx(int argc, const Object* argv);
