@@ -1,5 +1,7 @@
 2008-11-22  higepon  <higepon@users.sourceforge.jp>
 
+        * Added angle procedure and tests.
+
         * Added test for magnitude.
 
 2008-11-22  kokosabu  <kokosabu@gmail.com>
